# opencode-dashboard

./: AGENTS.md  CHANGELOG.md  Makefile  POST_INIT_CHECKLIST.md  README.md  TEMPLATE_GUIDE.md  UX_IMPROVEMENTS_PLAN.md  pyproject.toml
.github/workflows/: ci.yml
opencode_dashboard/: __init__.py  __main__.py  dashboard.py  dashboard_logviewer.py
tests/: test_dashboard.py  test_regression.py  test_timesheet_reader.py
